# gym-husky-ur5

./: .gitignore  README.md  setup.py
gym_husky_ur5/: __init__.py
gym_husky_ur5/algos/: Untitled.ipynb  visualize_husky_ur5.ipynb
gym_husky_ur5/algos/TD3/: TD3.py  train.py
gym_husky_ur5/algos/openai-baselines/acktr/: run_mujoco.py
gym_husky_ur5/algos/openai-baselines/ddpg/: main.py
gym_husky_ur5/algos/ppo1/: run_humanoid.py
gym_husky_ur5/algos/ppo2/: run_mujoco.py  test_stable_ppo2.py  train_stable_ppo2.py
gym_husky_ur5/algos/pytorch-a2c-ppo-acktr-gail/: Husky_UR5.md  enjoy.py  main.py  visualize.ipynb  visualize_husky_ur5.ipynb
gym_husky_ur5/algos/pytorch-a2c-ppo-acktr-gail/a2c_ppo_acktr/: arguments.py
gym_husky_ur5/algos/pytorch-a2c-ppo-acktr-gail/logs/husky_ur5/: 0.monitor.csv
gym_husky_ur5/algos/pytorch-a2c-ppo-acktr-gail/logs/husky_ur5-0/: 0.monitor.csv  log-rank001.txt  log.txt
gym_husky_ur5/algos/pytorch-a2c-ppo-acktr-gail/logs/husky_ur5-0/_eval/: 0.monitor.csv
gym_husky_ur5/algos/pytorch-a2c-ppo-acktr-gail/logs/husky_ur5-0/tb/: events.out.tfevents.1575316108.eclipse  events.out.tfevents.1575316181.eclipse
gym_husky_ur5/algos/pytorch-a2c-ppo-acktr-gail/logs/husky_ur5-2/: 0.monitor.csv
gym_husky_ur5/algos/pytorch-a2c-ppo-acktr-gail/logs/husky_ur5/_eval/: 0.monitor.csv
gym_husky_ur5/algos/ray/: ray_ppo.py
gym_husky_ur5/algos/ray-rllib/ray/: Untitled.ipynb  ray_ppo.py
gym_husky_ur5/algos/sac/: stable_sac_simple_train.py  stable_sac_train.py  test_stable_sac.py
gym_husky_ur5/algos/stable-baselines/: train_stable_ddpg.py  train_stable_trpo.py
gym_husky_ur5/algos/stable-baselines/sac/: stable_sac_simple_train_ray.py  train_sac.py  train_stable_sac.py
gym_husky_ur5/algos/trpo_mpi/: run_mujoco.py
gym_husky_ur5/envs/: README.md  ROS.md  __init__.py  dual_ur5_husky_env.py  mobile_dual_ur5_husky_env.py  mobile_dual_ur5_husky_gym_env.py  mobile_dual_ur5_husky_ros_env.py  robot_env.py  robot_gym_env.py  robot_ros_env.py  utils.py  utils_gripper.py  utils_husky.py  utils_ros.py  utils_test.py  utils_ur5.py
gym_husky_ur5/envs/assets/dual_ur5_husky/: actuator.xml  bottle.xml  can.xml  gripper.xml  mobile_pick_and_place.xml  mobile_pick_and_place_area.xml  objects copy.xml  objects.xml  pick_and_place.xml  pybullet_husky_ur.xml  robot.xml  robot_gripper_l.xml  robot_gripper_r.xml  robot_husky.xml  robot_husky_mobile.xml  robot_ur5_l.xml  robot_ur5_l_store.xml  robot_ur5_r.xml  robotiq_gripper_s.xml  robotiq_gripper_s_r.xml  robotiq_gripper_s_shared.xml  shared.xml
gym_husky_ur5/envs/assets/dual_ur5_husky/objects/: milk.xml  objects_shared.xml
gym_husky_ur5/envs/dual_ur5_husky/: mobile_pick_and_place.py  mobile_pick_and_place_gym.py  mobile_pick_and_place_ros.py  pick_and_place.py
gym_husky_ur5/envs/ros_interface/: husky_ur_ros.py  test.py
gym_husky_ur5/ros_pkgs/husky_train/: CMakeLists.txt  README.md  package.xml
gym_husky_ur5/ros_pkgs/husky_train/config/: husky_ur_motion_planner_parameters.yaml
gym_husky_ur5/ros_pkgs/husky_train/include/motion_planner/: kinematics_parser.h  motion_planner.h
gym_husky_ur5/ros_pkgs/husky_train/launch/: husky_ur_kenimatics_parser_test.launch  husky_ur_motion_planner_node.launch  husky_ur_motion_planner_test.launch
gym_husky_ur5/ros_pkgs/husky_train/script/: execute_trajectories.py
gym_husky_ur5/ros_pkgs/husky_train/src/: kinematics_parser.cpp  kinematics_parser_test.cpp  motion_planner copy  motion_planner.cpp  motion_planner_node copy  motion_planner_node.cpp  motion_planner_node_test.cpp
gym_husky_ur5/tests/: test_dual_ur5_husky.py  test_mobile_dual_ur5_husky.py  test_rllib_husky_gym.py  test_ros_server.py
trained_models/ppo/: CartPole-v1.pt  Reacher-v2.pt
(+2 files in other folders)
